<!--
  ~ Copyright (c) 2020 JabWeMet(shubham & sahil). All rights reserved.
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Jab we mate</string>

    // Splash Screen

    <string name="welcome">WELCOME</string>
    <string name="bestplacetofind">A place to find perfect partner for your dog</string>

    //Login page

    <string name="email">Type your email</string>
    <string name="pass">Type your password</string>
    <string name="login">Click to login</string>
    <string name="loginText">LOGIN</string>
    <string name="showpass">Show Password</string>
    <string name="donot">Don\'t have an account ?</string>
    <string name="registertext">Register</string>

    //Sign up page

    <string name="typename">Type your name</string>
    <string name="typephone">Type your phone</string>
    <string name="signup">Click to register</string>
    <string name="registerCaps">REGISTER</string>
    <string name="loginTextSmall">Login</string>
    <string name="city">Name your city</string>
    <string name="already">Already have an account ?</string>
    <string name="error_toast">Some error occurred. Please check your details or internet connection</string>
    <string name="linksent">Registered successfully. Please check your email to verify your account.</string>
    <string name="youcan">You can login after clicking on verification link.</string>
    <string name="pleaseverify">Please verify your email address before login.</string>


    //Menu items

    <string name="your_info">Your information</string>
    <string name="yourdogs">Your dogs</string>
    <string name="sign_out">Sign out</string>
    <string name="requests">Requests</string>
    <string name="shortlist">My shortlist</string>

    //Add dog activity

    <string name="addhead">ADD YOUR DOG</string>
    <string name="addphoto">Add photo</string>
    <string name="dogname">Enter your dog\'s name</string>
    <string name="dogage">Enter your dog\'s age</string>
    <string name="gender">Gender</string>
    <string name="dogbreed">Enter your dog\'s breed</string>
    <string name="addDog">Add details</string>
    <string name="additional">Additional information</string>

    // Search breeds activity

    <string name="searchbreeds">Type a breed name here</string>
    <string name="searchbutton">Click to search</string>


    // User profile

    <string name="userproftext">Your information</string>
    <string name="name">Name</string>
    <string name="profile_email">Email</string>
    <string name="phone">Phone</string>
    <string name="change">Change password</string>
    <string name="canchange">You can edit your name and phone number by clicking on it.</string>

    // Change password activity

    <string name="changepass">Change your password</string>
    <string name="newpassword">Type new password</string>
    <string name="confirmnewpassword">Type new password again</string>
    <string name="cnf">Confirm</string>

    // Radio

    <string name="male">Male</string>
    <string name="female">Female</string>

    <string name="add">Add dog</string>
    <string name="forget">Forget password ?</string>

    // Forget password

    <string name="recover">Recover your password</string>
    <string name="send">Send password reset link</string>
    <string name="link">A link will be sent to the email address you\'ve given here</string>


    // Dog description activity

    <string name="dognamehaed">Name</string>
    <string name="dogagehead">Age</string>
    <string name="dogbreedhead">Breed</string>
    <string name="doggenderhead">Gender</string>
    <string name="ownernamehead">Owner</string>
    <string name="ownerphonehead">Phone</string>
    <string name="owneremailhead">Email</string>
    <string name="ownercityhead">City</string>
    <string name="editdetails">Edit Details</string>
    <string name="accept">Accept</string>


    //HomePage

    <string name="showingDogs">Showing dogs</string>
    <string name="filter">Filter applied</string>
    <string name="remove">Remove filter</string>


    // Choose dog activity

    <string name="choose">Choose a dog to send request</string>
    <string name="sendreq">Send request</string>
    <string name="dognameselect">Dog name</string>
    <string name="makereq">Make request</string>

    // Req activity

    <string name="clickforreq">Showing the list of your dogs. Click to see the request details.</string>

    //ShortList

    <string name="shortlisthead">Showing your dogs here. Click on a dog to see it\'s pair</string>


    <string-array name="ageArray">

        <item>Age</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>

    </string-array>


</resources>
