<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2020 JabWeMet(shubham & sahil). All rights reserved.
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePage">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/app_bar_layout">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:id="@+id/home_page_toolbar"
            app:title="@string/app_name"
            android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:layout_below="@id/app_bar_layout"
        android:id="@+id/filters_layout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:id="@+id/breed_filter"
            android:background="@drawable/add_dog_et_bg"
            android:layout_marginTop="15dp"
            android:inputType="textCapWords"
            android:textColor="@color/white"
            android:layout_toLeftOf="@id/radioGroup"
            android:layout_toStartOf="@id/radioGroup"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:drawableLeft="@drawable/search_icon"
            android:drawableStart="@drawable/search_icon"
            android:paddingStart="15dp"
            android:paddingLeft="15dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:drawablePadding="10dp"
            android:hint="@string/searchbreeds"
            android:textColorHint="@color/silver"
            android:fontFamily="@font/regular">

        </EditText>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioGroup"
            android:theme="@style/radio"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="15dp"
            android:textAlignment="center"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:id="@+id/radio_male"
                android:theme="@style/radio"
                android:checked="true"
                android:onClick="checkButton"
                android:textColor="@color/white">

            </RadioButton>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:id="@+id/radio_female"
                android:theme="@style/radio"
                android:onClick="checkButton"
                android:textColor="@color/white">

            </RadioButton>

        </RadioGroup>

        <Button
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:id="@+id/filter_button"
            android:background="@drawable/button_bg"
            android:layout_below="@id/breed_filter"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="17dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/searchbutton">

        </Button>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove"
            android:id="@+id/filter_remove"
            android:fontFamily="@font/regular"
            android:visibility="gone"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/filter_button"
            android:layout_marginBottom="7dp">

        </TextView>


    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:fontFamily="@font/bold"
        android:id="@+id/showtext"
        android:layout_marginTop="5dp"
        android:text="@string/showingDogs"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/filters_layout"
        android:layout_marginBottom="5dp">

    </TextView>



    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/home_page_recycler_view"
        android:layout_below="@id/showtext"
        android:layout_alignParentBottom="true">

    </androidx.recyclerview.widget.RecyclerView>


</RelativeLayout>