<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2020 JabWeMet(shubham & sahil). All rights reserved.
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetPasswordActivity"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/forget_head_text"
        android:text="@string/recover"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:layout_marginTop="50dp"
        android:textSize="23sp">

    </TextView>


    <EditText
        android:id="@+id/forget_pass_et"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/forget_head_text"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/add_dog_et_bg"
        android:drawableStart="@drawable/email_icon"
        android:drawableLeft="@drawable/email_icon"
        android:drawablePadding="10dp"
        android:fontFamily="@font/regular"
        android:hint="@string/email"
        android:paddingStart="15dp"
        android:paddingLeft="15dp"
        android:paddingEnd="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/silver">

    </EditText>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/forget_pass_button"
        android:background="@drawable/button_bg"
        android:layout_below="@id/forget_pass_et"
        android:layout_marginTop="30dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="20dp"
        android:text="@string/send">

    </Button>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/link"
        android:layout_centerInParent="true"
        android:textAlignment="center"
        android:textColor="@color/white">

    </TextView>

</RelativeLayout>