<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/loginpagebg">

    <RelativeLayout
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:alpha="0.65"
        android:background="@drawable/splash_text_bg"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.246">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginText"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:alpha="1"
            android:fontFamily="@font/bold"
            android:layout_centerInParent="true">

        </TextView>


    </RelativeLayout>

    <EditText
        android:id="@+id/email_sign_in_editText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textColor="@color/white"
        android:fontFamily="@font/regular"
        android:inputType="textEmailAddress"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/edittext_bg"
        android:drawableStart="@drawable/email_icon"
        android:drawableLeft="@drawable/email_icon"
        android:hint="@string/email"
        android:drawablePadding="10dp"
        android:paddingStart="15dp"
        android:paddingLeft="15dp"
        android:paddingEnd="10dp"
        android:paddingRight="10dp"
        android:textColorHint="@color/silver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499">

    </EditText>


    <EditText
        android:id="@+id/password_sign_in_editText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textColor="@color/white"
        android:fontFamily="@font/regular"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/edittext_bg"
        android:drawableStart="@drawable/password_icon"
        android:drawableLeft="@drawable/password_icon"
        android:drawablePadding="10dp"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:paddingLeft="15dp"
        android:paddingEnd="10dp"
        android:paddingRight="10dp"
        android:textColorHint="@color/silver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_sign_in_editText"
        app:layout_constraintVertical_bias="0.054">

    </EditText>

    <CheckBox
        android:id="@+id/login_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/showpass"
        android:textColor="@color/white"
        android:theme="@style/Checkbox"
        android:fontFamily="@font/regular"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_sign_in_editText"
        app:layout_constraintVertical_bias="0.44">


    </CheckBox>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:alpha="0.6"
        android:background="@drawable/button_bg"
        android:elevation="20dp"
        android:fontFamily="@font/bold"
        android:text="@string/login"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.746">

    </Button>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/regular"
        android:text="@string/donot"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.118"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.977">

    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registertext"
        android:textColor="@color/colorAccent"
        android:id="@+id/registerText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.032"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.977">

    </TextView>




</androidx.constraintlayout.widget.ConstraintLayout>