<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2020 JabWeMet(shubham & sahil). All rights reserved.
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:background="@drawable/loginpagebg">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:alpha="0.65"
        android:background="@drawable/splash_text_bg"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.082">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:alpha="1"
            android:fontFamily="@font/bold"
            android:text="@string/registerCaps"
            android:textColor="@color/white"
            android:textSize="20sp">

        </TextView>

    </RelativeLayout>

    <EditText
        android:id="@+id/name_edit_text_signup"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/edittext_bg"
        android:drawableStart="@drawable/user_icon"
        android:drawableLeft="@drawable/user_icon"
        android:drawablePadding="10dp"
        android:fontFamily="@font/regular"
        android:hint="@string/typename"
        android:inputType="textCapWords"
        android:paddingStart="15dp"
        android:paddingLeft="15dp"
        android:paddingEnd="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/silver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.254">

    </EditText>

    <EditText
        android:id="@+id/email_edit_text_signup"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/edittext_bg"
        android:drawableStart="@drawable/email_icon"
        android:drawableLeft="@drawable/email_icon"
        android:drawablePadding="10dp"
        android:fontFamily="@font/regular"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="15dp"
        android:paddingLeft="15dp"
        android:paddingEnd="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/silver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_edit_text_signup"
        app:layout_constraintVertical_bias="0.034">

    </EditText>

    <EditText
        android:id="@+id/phone_edit_text_signup"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/edittext_bg"
        android:digits="0123456789"
        android:drawableStart="@drawable/phone_icon"
        android:drawableLeft="@drawable/phone_icon"
        android:drawablePadding="10dp"
        android:fontFamily="@font/regular"
        android:hint="@string/typephone"
        android:inputType="phone"
        android:paddingStart="15dp"
        android:paddingLeft="15dp"
        android:paddingEnd="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/silver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_edit_text_signup"
        app:layout_constraintVertical_bias="0.037">

    </EditText>

    <EditText
        android:id="@+id/password_edit_text_signup"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/edittext_bg"
        android:drawableStart="@drawable/password_icon"
        android:drawableLeft="@drawable/password_icon"
        android:drawablePadding="10dp"
        android:fontFamily="@font/regular"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:paddingLeft="15dp"
        android:paddingEnd="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/silver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_edit_text_signup"
        app:layout_constraintVertical_bias="0.044">

    </EditText>

    <EditText
        android:id="@+id/city_edit_text_signup"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/edittext_bg"
        android:drawableStart="@drawable/city_icon"
        android:drawableLeft="@drawable/city_icon"
        android:drawablePadding="10dp"
        android:fontFamily="@font/regular"
        android:hint="@string/city"
        android:inputType="textCapWords"
        android:paddingStart="15dp"
        android:paddingLeft="15dp"
        android:paddingEnd="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/silver"
        app:layout_constraintBottom_toTopOf="@+id/checkBox2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_edit_text_signup"
        app:layout_constraintVertical_bias="0.394">

    </EditText>

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/showpass"
        android:fontFamily="@font/regular"
        android:textColor="@color/white"
        android:theme="@style/Checkbox"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_edit_text_signup"
        app:layout_constraintVertical_bias="0.267">

    </CheckBox>

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:alpha="0.6"
        android:background="@drawable/button_bg"
        android:fontFamily="@font/bold"
        android:text="@string/signup"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox2"
        app:layout_constraintVertical_bias="0.11" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_button"
        app:layout_constraintVertical_bias="0.915">

    </TextView>

    <TextView
        android:id="@+id/LoginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginTextSmall"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_button"
        app:layout_constraintVertical_bias="0.915">

    </TextView>


</androidx.constraintlayout.widget.ConstraintLayout>